Bug 304574 - kmplot - incorrect extrema for second derivative - shows zero crossings
Summary: kmplot - incorrect extrema for second derivative - shows zero crossings
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-04 20:53 UTC by James
Modified: 2019-09-20 05:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications 19.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James 2012-08-04 20:53:36 UTC
For a Cartesian plot with trigonometric functions, enabling "Show 2nd derivative" under the "Derivatives" tab, then selecting the "Advanced" button _for_the_second_derivative_, and then  checking the box for "Show extrema (minimum/maximum points)", the feature fails, showing instead the zero crossings, not the minima and maxima.

This is in debian kmplot Version: 4:4.8.4-2

Reproducible: Always

Steps to Reproduce:
1.sin(x)+(1/3)*sin(3*x)
2.
3.
Actual Results:  
zero crossings

Expected Results:  
extrema - maxima and minima
Comment 1 Andrew Crouthamel 2018-11-09 00:55:30 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Andrew Crouthamel 2018-11-18 03:35:30 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Yuri Chornoivan 2019-09-19 16:55:12 UTC
Git commit 8fbaec6ce6332ef1d546397e11889a20675f8546 by Yuri Chornoivan.
Committed on 19/09/2019 at 16:54.
Pushed by yurchor into branch 'master'.

Implement third derivative and loosen the mesh a bit to calculate the fourth. This should allow to calculate extrema for second derivative right.

M  +21   -8    kmplot/function.cpp
M  +2    -0    kmplot/function.h
M  +1    -1    kmplot/view.cpp

https://commits.kde.org/kmplot/8fbaec6ce6332ef1d546397e11889a20675f8546
Comment 4 Yuri Chornoivan 2019-09-20 05:51:38 UTC
Git commit 6e3c471fbdbad5cc249d623255519742adc2e26e by Yuri Chornoivan.
Committed on 20/09/2019 at 05:51.
Pushed by yurchor into branch 'Applications/19.08'.

Implement third derivative and loosen the mesh a bit to calculate the fourth. This should allow to calculate extrema for second derivative right.

M  +21   -8    kmplot/function.cpp
M  +2    -0    kmplot/function.h
M  +1    -1    kmplot/view.cpp

https://commits.kde.org/kmplot/6e3c471fbdbad5cc249d623255519742adc2e26e