Implement third derivative and loosen the mesh a bit to calculate the fourth. This should allow to calculate extrema for second derivative right.

BUG: 304574